--- a/Android/app/src/main/res/values/strings.xml
+++ b/Android/app/src/main/res/values/strings.xml
@@ -1,15 +1,18 @@
 <resources>
     <string name="app_name">OneIsAll</string>
     <!-- Strings related to login -->
-    <string name="prompt_email">Email</string>
-    <string name="prompt_password">Password (optional)</string>
-    <string name="action_sign_in">Sign in or register</string>
-    <string name="action_sign_in_short">Sign in</string>
-    <string name="error_invalid_email">This email address is invalid</string>
-    <string name="error_invalid_password">This password is too short</string>
-    <string name="error_incorrect_password">This password is incorrect</string>
-    <string name="error_field_required">This field is required</string>
-    <string name="permission_rationale">"Contacts permissions are needed for providing email
-        completions."
+    <string name="prompt_email">邮箱</string>
+    <string name="prompt_password">密码</string>
+    <string name="action_sign_in">登录</string>
+    <string name="action_sign_in_short">登录</string>
+    <string name="error_invalid_email">邮箱无效</string>
+    <string name="error_invalid_password">密码无效</string>
+    <string name="error_incorrect_password">密码错误</string>
+    <string name="error_field_required">此字段为必选</string>
+    <string name="permission_rationale">"需要联系人权限"
     </string>
+    <string name="title_activity_home">One Is All</string>
+    <string name="title_all_tasks">任务广场</string>
+    <string name="title_my_tasks">我的任务</string>
+    <string name="title_personal_info">个人信息</string>
 </resources>
