--- a/qmuidemo/src/main/res/values/strings.xml
+++ b/qmuidemo/src/main/res/values/strings.xml
@@ -152,10 +152,20 @@
 
     <!-- 其他界面 -->
 
+    <string name="task_detail">任务详情</string>
+    <string name="task_title">任务名称</string>
+    <string name="task_template">模板</string>
+    <string name="task_type">类型</string>
+    <string name="task_description">描述</string>
+    <string name="task_time">发布时间</string>
+    <string name="task_credit">奖励积分</string>
+    <string name="task_user_level">用户等级要求</string>
+    <string name="task_max_num">人员需求</string>
+
     <!-- 关于界面 -->
     <string name="about_title">关于</string>
     <string name="about_item_homepage">访问官网</string>
     <string name="about_item_github">GitHub</string>
-    <string name="about_copyright">© %1$s QMUI Team All rights reserved.</string>
+    <string name="about_copyright">© %1$s One is All Team All rights reserved.</string>
 
 </resources>
