--- a/qmuidemo/src/main/res/values/strings.xml
+++ b/qmuidemo/src/main/res/values/strings.xml
@@ -174,8 +174,9 @@
     <string name="action_sign_in">Sign in or register</string>
     <string name="action_sign_in_short">Sign in</string>
     <string name="error_invalid_email">邮箱无效</string>
+    <string name="error_invalid_username">用户名无效</string>
     <string name="error_invalid_password">密码太短</string>
-    <string name="error_incorrect_password">This password is incorrect</string>
+    <string name="error_incorrect_password">密码不一致</string>
     <string name="error_field_required">此字段必填</string>
 
 </resources>
